--- a/css/default.css
+++ b/css/default.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Rubik", sans-serif;
-  background: #f5f5f5;
+  background: #f5f5f5 url('../img/bg.jpg') no-repeat;
   color: #161717;
   padding-top: 100px;
 }
@@ -12,13 +12,6 @@ h1 {
   font-weight: 500;
   font-size: 36px;
   line-height: 48px;
-}
-
-#background {
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: -1;
 }
 
 #todo {
