--- a/css/default.css
+++ b/css/default.css
@@ -1,92 +1,93 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;0,700;1,400&display=swap");
-
 body {
-  font-family: "Rubik", sans-serif;
-  background: #f5f5f5 url('../img/bg.jpg') no-repeat;
-  color: #161717;
-  padding-top: 100px;
+    font-family: "Rubik", sans-serif;
+    background: #f5f5f5 url("../img/bg.jpg") no-repeat;
+    color: #161717;
+    padding-top: 100px;
 }
 
 h1 {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 36px;
-  line-height: 48px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 48px;
 }
 
 #todo {
-  position: relative;
-  margin: 0 auto;
-  padding: 48px;
-  max-width: 808px;
-  background: #fff;
-  border-radius: 16px;
-  box-shadow: 0 12px 20px 10px rgba(0, 0, 0, 0.05);
+    position: relative;
+    margin: 0 auto;
+    padding: 48px;
+    max-width: 808px;
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 12px 20px 10px rgba(0, 0, 0, 0.05);
 }
 
 #add #submit {
-  position: relative;
-  width: 100%;
-  border: 3px solid #bdbdbd;
-  border-radius: 12px;
+    position: relative;
+    width: 100%;
+    border: 3px solid #bdbdbd;
+    border-radius: 12px;
 }
 
 #add #submit input {
-  width: 80%;
-  border: none;
-  outline: none;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  margin: 5px 10px;
-  background: transparent;
-  color: #333333;
+    width: 80%;
+    border: none;
+    outline: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    margin: 5px 10px;
+    background: transparent;
+    color: #333333;
 }
 
 #add .btn {
-  position: absolute;
-  right: 10px;
-  top: 3px;
-  border: none;
-  background: #fff;
-  color: #29abe2;
-  font-size: 16pt !important;
+    position: absolute;
+    right: 10px;
+    top: 3px;
+    border: none;
+    background: #fff;
+    color: #29abe2;
+    font-size: 16pt !important;
 }
 
 #app {
-  font-weight: 400;
-  font-size: 32px;
+    font-weight: 400;
+    font-size: 32px;
 }
 
 #app ul {
-  list-style: none;
-  padding:0;
-  margin:0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 #app ul li {
-  line-height: 38px;
-  margin: 10px 0;
+    line-height: 38px;
+    margin: 10px 0;
 }
 
 #app img {
-  vertical-align: -15px;
+    vertical-align: -15px;
 }
 
 #app label {
-  margin: 0 20px;
+    margin: 0 20px;
 }
 
 #app label span {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 .delete {
-  color: transparent;
-  vertical-align: -1px;
+    color: transparent;
+    vertical-align: -1px;
+    text-decoration: none;
+    font-size: 20pt;
 }
 
-label:hover > .delete {
-  color: #ff0000;
+label:hover>.delete {
+    color: #ff0000;
 }
