--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,10 @@
+/* fonts */
+
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran&display=swap");
+
+/* start main styles */
+
 body {
     font-family: "Rubik", sans-serif;
     background: #f5f5f5 url("../img/bg.jpg") no-repeat;
@@ -37,8 +43,7 @@ h1 {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 21px;
-    margin: 5px 10px;
+    padding: 15px 15px;
     background: transparent;
     color: #333333;
 }
@@ -46,11 +51,12 @@ h1 {
 #add .btn {
     position: absolute;
     right: 10px;
-    top: 3px;
+    top: -8px;
     border: none;
-    background: #fff;
+    background: transparent;
     color: #29abe2;
-    font-size: 16pt !important;
+    font-family: "Catamaran", sans-serif;
+    font-size: 26pt;
 }
 
 #app {
