--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,6 @@
 /* fonts */
 
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;0,700;1,400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Catamaran&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran&family=Rubik:ital,wght@0,400;0,600&display=swap");
 
 /* start main styles */
 
@@ -9,12 +8,13 @@ body {
     font-family: "Rubik", sans-serif;
     background: #f5f5f5 url("../img/bg.jpg") no-repeat;
     color: #161717;
+    font-weight: 400;
     padding-top: 100px;
 }
 
 h1 {
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 36px;
     line-height: 48px;
 }
@@ -60,7 +60,7 @@ h1 {
 }
 
 #app {
-    font-weight: 400;
+    font-weight: 300;
     font-size: 32px;
 }
 
