--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,9 @@
 
 body {
     font-family: "Rubik", sans-serif;
-    background: #f5f5f5 url("../img/bg.jpg") no-repeat;
+    background: #333 url("../img/bg.jpg") no-repeat;
+    background-position: center;
+    background-attachment: fixed;
     color: #161717;
     font-weight: 400;
     padding-top: 100px;
