--- a/css/default.css
+++ b/css/default.css
@@ -22,7 +22,7 @@ h1 {
 
 #todo {
     position: relative;
-    margin: 80px auto 0 auto;
+    margin: 80px auto;
     padding: 48px;
     max-width: 712px;
     background: #fff;
