--- a/css/default.css
+++ b/css/default.css
@@ -33,17 +33,17 @@ h1 {
 #add #submit {
   position: relative;
   width: 100%;
-  border: 3px solid #bdbdbd;
+  border: 3px solid #d2d2d2;
   border-radius: 12px;
   transition: all 0.1s linear;
 }
 
 #add #submit:hover {
-  border: 3px solid #9b9b9b;
+  border: 3px solid #bdbdbd;
 }
 
 #add #submit:focus-within {
-  border: 3px solid #9b9b9b;
+  border: 3px solid #bdbdbd;
 }
 
 #add #submit input {
